--- a/css/news.css
+++ b/css/news.css
@@ -960,7 +960,7 @@ body {
 
 .main-title {
   width: 100%;
-  margin: 50px auto 90px;
+  margin: 50px auto;
   box-sizing: border-box;
   padding: 0 142px;
   overflow: hidden;
@@ -979,14 +979,17 @@ body {
 
 .main-title-img {
   width: 100%;
-  height: 100%;
+  height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 121px;
+  margin-top: 120px;
 }
 .main-title-img img {
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .main-title::after {
@@ -1033,7 +1036,7 @@ main {
 }
 
 .container {
-  margin: 60px 0;
+  margin: 90px 0;
   width: 100%;
 }
 
@@ -1167,7 +1170,7 @@ ul.tabs li.current {
 }
 
 .esg-news-container {
-  margin-top: 60px;
+  margin-top: 90px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -1264,7 +1267,7 @@ ul.tabs li.current {
     position: relative;
     text-align: left;
     font-family: "money";
-    font-size: 1.6rem;
+    font-size: 1.2rem;
   }
   .main-title b {
     display: inline-block;
@@ -1275,7 +1278,6 @@ ul.tabs li.current {
   }
   .main-title-img {
     width: 100%;
-    min-height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1323,7 +1325,7 @@ ul.tabs li.current {
     height: 120vh;
   }
   .container {
-    margin: 60px 0;
+    margin: 90px 0;
     width: 100%;
   }
   ul.tabs {
@@ -1440,7 +1442,7 @@ ul.tabs li.current {
     text-align: center;
   }
   .esg-news-container {
-    margin-top: 60px;
+    margin-top: 90px;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -1531,7 +1533,7 @@ ul.tabs li.current {
     height: 120vh;
   }
   .container {
-    margin: 30px 0;
+    margin: 90px 0;
     width: 100%;
   }
   ul.tabs {
@@ -1650,25 +1652,25 @@ ul.tabs li.current {
 @media (max-width: 480px) {
   .main-title {
     width: 100%;
-    margin: 50px 0;
+    margin: 30px 25px;
     box-sizing: border-box;
-    padding: 0 50px;
+    padding: 0 25px;
     overflow: hidden;
     position: relative;
     text-align: left;
     font-family: "money";
-    font-size: 1.6rem;
+    font-size: 1rem;
   }
   .main-title b {
     display: inline-block;
     background-color: var(--color-white);
     position: relative;
     z-index: 2;
-    padding-right: 20px;
+    padding-right: 0;
   }
   .main-title-img {
     width: 100%;
-    min-height: 100px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1676,12 +1678,13 @@ ul.tabs li.current {
   }
   .main-title-img img {
     width: 100%;
-    height: auto;
+    height: 100%;
     min-height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
   .main-title::after {
+    display: none;
     content: "";
     position: absolute;
     left: 50%;
@@ -1716,7 +1719,7 @@ ul.tabs li.current {
     height: 120vh;
   }
   .container {
-    margin: 60px 0;
+    margin: 90px 0;
     width: 100%;
   }
   ul.tabs {
@@ -1835,7 +1838,7 @@ ul.tabs li.current {
     text-align: center;
   }
   .esg-news-container {
-    margin-top: 60px;
+    margin-top: 90px;
     display: flex;
     flex-direction: column;
     text-align: center;
