--- a/css/scss/news.scss
+++ b/css/scss/news.scss
@@ -27,7 +27,7 @@ body {
 // title
 .main-title{
     width: 100%;
-    margin: 50px auto 90px;
+    margin: 50px auto;
     box-sizing: border-box;
     padding: 0 142px;
     overflow: hidden;
@@ -46,13 +46,16 @@ body {
 }
 
 .main-title-img {
-    width: 100%; height: 100%;
+    width: 100%;
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 121px;
+    margin-top: 120px;
     img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -106,7 +109,7 @@ main {
 }
 
 .container{
-    margin: 60px 0;
+    margin: 90px 0;
     width: 100%;
 }
 
@@ -263,7 +266,7 @@ ul.tabs li.current{
 }
 
 .esg-news-container {
-    margin-top: 60px;
+    margin-top: 90px;
     display: flex;
     flex-direction: column;
     text-align: center;
