--- a/css/sustainability.css
+++ b/css/sustainability.css
@@ -968,6 +968,9 @@ header {
 }
 .main-title-img img {
   height: 250px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .main-title::after {
@@ -1002,6 +1005,7 @@ header {
 
 main {
   color: var(--color-black);
+  font-family: "NanumGothic";
 }
 
 .sustainability {
@@ -1259,7 +1263,7 @@ main {
 
 @media (min-width: 1024px) and (max-width: 1700px) {
   .main-title {
-    margin: 50px 142px;
+    margin: 30px 50px;
     overflow: hidden;
     position: relative;
     font-family: "money";
@@ -1274,6 +1278,10 @@ main {
   }
   .main-title-img {
     padding-top: 122px;
+  }
+  .main-title-img img {
+    height: 250px;
+    width: 100%;
   }
   .main-title::after {
     content: "";
@@ -1304,7 +1312,7 @@ main {
   }
   .sustainability {
     width: 100%;
-    margin: 0 auto;
+    margin: 0 50px;
   }
   .tab-head {
     text-align: center;
@@ -1489,7 +1497,7 @@ main {
     padding-top: 122px;
   }
   .main-title-img img {
-    width: 100%;
+    height: 250px;
   }
   .main-title::after {
     content: "";
@@ -1719,7 +1727,6 @@ main {
     padding-top: 122px;
   }
   .main-title-img img {
-    width: 100%;
     height: 200px;
   }
   .main-title::after {
