--- a/css/food.css
+++ b/css/food.css
@@ -16,6 +16,7 @@ html {
 }
 
 body {
+  font-family: "NanumGothic";
   -moz-user-select: none;
        user-select: none;
   -webkit-user-select: none;
@@ -976,13 +977,11 @@ h2, h3, .tab-list, .food-safety-1,
 h2 {
   font-size: 1.5rem;
   margin-bottom: 60px;
-  font-family: "NanumGothicBold";
 }
 
 h3 {
   margin-bottom: 60px;
   font-size: 2rem;
-  font-family: "NanumGothicBold";
 }
 
 article {
@@ -1079,7 +1078,6 @@ article .food-main .food-main-bg {
 article .food-main .food-main-bg p {
   color: var(--color-white);
   font-size: 1.5rem;
-  font-family: "NanumGothicBold";
   padding-top: 80px;
   line-height: 180%;
 }
@@ -1195,7 +1193,6 @@ article .food-rule::after {
 }
 article .food-record span {
   font-size: 1.25rem;
-  font-family: "NanumGothicBold";
 }
 article .food-record p {
   margin: 60px auto;
