--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -18,6 +18,7 @@
 *{box-sizing: border-box; padding:0; margin: 0; } 
 html{font-size: 20px; color: #555; line-height: 1.5;} 
 body{ 
+    font-family: 'NanumGothic';
     user-select: none; 
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
