--- a/css/scss/food.scss
+++ b/css/scss/food.scss
@@ -21,12 +21,10 @@ h2, h3, .tab-list, .food-safety-1,
 .line{margin: 0 142px;}
 h2{
     font-size: 1.5rem; margin-bottom: 60px;
-    font-family: 'NanumGothicBold';
 }
 h3{
     margin-bottom: 60px;
     font-size: 2rem;
-    font-family: 'NanumGothicBold';
 }
 article{
     margin: 90px 0;
@@ -111,7 +109,6 @@ article{
             p{
                 color: var(--color-white);
                 font-size: 1.5rem;
-                font-family: 'NanumGothicBold';
                 padding-top: 80px;
                 line-height: 180%;
             }
@@ -218,7 +215,7 @@ article{
         }
     }
     .food-record{
-        span{font-size: 1.25rem; font-family: 'NanumGothicBold';}
+        span{font-size: 1.25rem;}
         p{
             margin: 60px auto;
             img{width: 100%;}
