--- a/css/company.css
+++ b/css/company.css
@@ -949,12 +949,21 @@ header {
 }
 
 .main-title-img {
+  width: 100%;
+  height: 250px;
   margin-top: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main-title-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .main-title-img img {
-  width: 100%;
-  height: 250px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -965,12 +974,12 @@ header {
 
 .company {
   width: 1636px;
-  margin: auto auto 0 auto;
+  margin: 0 auto;
   color: var(--color-black);
 }
 
 .main-title {
-  margin: 50px auto;
+  margin: 50px 142px;
   overflow: hidden;
   position: relative;
   font-family: "money";
@@ -1578,11 +1587,12 @@ header {
 
 @media (min-width: 1024px) and (max-width: 1700px) {
   .company {
+    padding: 0 142px;
     width: 100%;
-    padding: 0 25px;
+    margin: auto auto 0 auto;
   }
   .main-title {
-    margin: 30px 50px;
+    margin: 30px 142px;
     font-size: 1.6rem;
   }
   .tab-list {
@@ -1987,7 +1997,7 @@ header {
 @media (max-width: 1024px) {
   .company {
     width: 100%;
-    padding: 0 25px;
+    padding: 0 50px;
     margin: 0 auto 0 auto;
   }
   .main-title {
@@ -2024,6 +2034,7 @@ header {
     font-family: "NanumGothic";
   }
   .tab-body02 > figure > img {
+    width: 100%;
     margin-top: 60px;
     border-radius: 46px;
   }
@@ -2400,11 +2411,16 @@ header {
     margin: 0 auto 0 auto;
   }
   .main-title-img {
+    width: 100%;
+    height: 200px;
     margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .main-title-img img {
     width: 100%;
-    height: 200px;
+    height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
