--- a/css/scss/_res-company.scss
+++ b/css/scss/_res-company.scss
@@ -1,12 +1,12 @@
 // 화면이 1024px 이상 1700px이하
 @media (min-width:1024px) and (max-width:1700px) {
     .company {
+        padding: 0 142px;
         width: 100%;
-        padding: 0 25px;
-
+        margin: auto auto 0 auto;
     }
     .main-title {
-        margin: 30px 50px;
+        margin: 30px 142px;
         font-size: 1.6rem;
     }
     .tab-list {
@@ -411,7 +411,7 @@
 @media (max-width: 1024px) {
     .company {
         width: 100%;
-        padding: 0 25px;
+        padding: 0 50px;
         margin: 0 auto 0 auto;
     }
     .main-title {
@@ -448,6 +448,7 @@
         font-family: 'NanumGothic';
     }
     .tab-body02 > figure > img{
+        width: 100%;
         margin-top: 60px;
         border-radius: 46px;
     }
@@ -825,12 +826,17 @@
         margin: 0 auto 0 auto;
     }
     .main-title-img {
-        margin-top: 120px;
-    }
-    .main-title-img img{
         width: 100%;
         height: 200px;
-        object-fit: cover;
+        margin-top: 120px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
     .main-title {
         margin: 25px 0;
