--- a/css/scss/company.scss
+++ b/css/scss/company.scss
@@ -7,12 +7,21 @@
     --color-green2: #B7D47F;
     --color-green3: #DCEFB7;
 } 
+
 .main-title-img {
-    margin-top: 120px;
-}
-.main-title-img img{
     width: 100%;
     height: 250px;
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.main-title-img img{
     object-fit: cover;
 }
 .body{
@@ -20,11 +29,11 @@
 }
 .company{
     width: 1636px;
-    margin: auto auto 0 auto;
+    margin: 0 auto;
     color: var(--color-black);
 }
 .main-title{
-    margin: 50px auto;
+    margin: 50px 142px;
     overflow: hidden;
     position: relative;
     font-family: 'money';
