--- a/css/scss/_res_sustainability.scss
+++ b/css/scss/_res_sustainability.scss
@@ -90,7 +90,7 @@
                 align-items: center;
                 padding: 40px 70px;
                 background-color: #F8F8F8;
-                width: 100%;
+                width: 1140px;
                 margin: 10px auto;
                 b{width: 20%;}
                 div{
