--- a/css/scss/sustainability.scss
+++ b/css/scss/sustainability.scss
@@ -64,6 +64,7 @@
 main{
     color: var(--color-black);
     font-family: 'NanumGothic';
+    b{font-family: 'NanumGothicBold';}
 }
 
 .sustainability{
@@ -134,11 +135,14 @@ main{
             word-break: keep-all;
             opacity: 0;
             transform: translateY(40%);
-            b{width: 20%;}
+            b{
+                width: 20%;
+                font-family: 'NanumGothicBold';
+            }
             div{
                 p{
                     display: flex;
-                    font-weight: 600;
+                    font-family: 'NanumGothicBold';
                     &::before{
                         content: "";
                         width:5px;height:5px;
