--- a/css/scss/_res-food.scss
+++ b/css/scss/_res-food.scss
@@ -10,9 +10,8 @@
                 width: 55%;
                 display: block;
 
-                &:nth-of-type(1)::after{
-                    right: 3%; bottom: 3%;
-                    transform: translate(-3%, -3%);
+                &::after{
+                    transform: translate(-30%, -90%);
                 }
             }
         }
@@ -185,10 +184,10 @@
                 border-radius: 30px;
 
                 // hover
-                &:nth-of-type(1)::before{
+                &::before{
                     border-radius: 30px;
                 }
-                &:nth-of-type(1)::after{
+                &::after{
                     right: 5%; bottom: 5%;
                     transform: translate(-5%, -5%);
                     font-size: 1.2rem;
