--- a/css/scss/food.scss
+++ b/css/scss/food.scss
@@ -259,7 +259,7 @@ article{
             position: relative;
 
             // hover
-            &:nth-of-type(1)::before{
+            &::before{
                 content: '';
                 display: block;
                 position: absolute;
@@ -270,19 +270,18 @@ article{
                 border: 5px solid var(--color-green1);
                 opacity: 0; transition: .3s;
             }
-            &:nth-of-type(1)::after{
+            &::after{
                 content: '신청하기 →';
                 display: block;
                 position: absolute;
-                right: 3%; bottom: 6%;
-                transform: translate(-3%, -6%);
+                right: 0; bottom: 0;
+                transform: translate(-35%, -90%);
                 font-family: 'money';
                 font-size: 1.5rem;
                 color: var(--color-green1);
                 opacity: 0; transition: .3s;
             }
-            &:nth-of-type(1):hover::before,
-            &:nth-of-type(1):hover::after{
+            &:hover::before, &:hover::after{
                 opacity: 1;
             }
         }
