--- a/css/index.css
+++ b/css/index.css
@@ -293,6 +293,7 @@ header {
     top: 100%;
   }
   .nav-down {
+    overflow: hidden;
     position: fixed;
     left: 0;
     top: 0;
@@ -1217,7 +1218,7 @@ body {
 .sec4-tab-menu {
   width: 100%;
   height: 60vh;
-  padding: 60px 0;
+  padding: 30px 0;
   margin: 0 auto;
   position: relative;
 }
@@ -1264,7 +1265,7 @@ body {
   }
 }
 .tab-content {
-  height: 105%;
+  height: 95%;
   display: none;
   color: var(--color-black);
   background: var(--color-white);
@@ -1284,12 +1285,12 @@ body {
   display: none;
 }
 .tab-content .tab-menu-1 {
-  height: 80%;
+  height: 100%;
   text-align: center;
-  display: flex;
   justify-content: center;
+  display: flex;
   flex-direction: column;
-  margin: 30px 50px 0;
+  margin: 0 50px 0;
 }
 .tab-content .tab-menu-1 b {
   font-size: 20px;
@@ -1301,7 +1302,7 @@ body {
 }
 .tab-content .tab-menu-1 .tab-box .arrowbox-1 {
   width: 100%;
-  max-width: 315px;
+  max-width: 230px;
   margin: 30px 20px 0;
 }
 .tab-content .tab-menu-1 .tab-box .arrowbox-1 .bg-box {
@@ -1319,8 +1320,8 @@ body {
   padding: 0 10px 45px 0;
 }
 .tab-content .tab-menu-1 .tab-box .arrowbox-1 .bg-box img {
-  width: 35%;
-  max-width: 120px;
+  width: 25%;
+  max-width: 100px;
   height: auto;
   margin-right: 12%;
 }
@@ -1334,13 +1335,13 @@ body {
 .tab-content .tab-menu-1 .tab-text-box {
   display: flex;
   justify-content: center;
-  text-align: center;
+  margin-top: -20px;
 }
 .tab-content .tab-menu-1 .tab-text-box b {
-  max-width: 360px;
+  max-width: 270px;
   flex: 1;
   white-space: pre-line;
-  font-size: 20px;
+  font-size: 18px;
   align-self: center;
   font-weight: normal;
 }
