--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -281,7 +281,7 @@
     .sec4-tab-menu{
         width: 100%;
         height: 60vh;
-        padding: 60px 0;
+        padding: 30px 0;
         margin: 0 auto;
         position: relative;
 
@@ -336,7 +336,7 @@
     }
     
     .tab-content{
-        height: 105%;
+        height: 95%;
         display: none;
         color: var(--color-black);
         background: var(--color-white);
@@ -358,12 +358,12 @@
         }
 
         .tab-menu-1 {
-            height: 80%;
+            height: 100%;
             text-align: center;
-            display: flex;
             justify-content: center;
+            display: flex;
             flex-direction: column;
-            margin: 30px 50px 0;
+            margin: 0 50px 0;
 
             b {
                 font-size: 20px;
@@ -375,7 +375,7 @@
                 align-items: center;
                 .arrowbox-1 {
                     width: 100%;
-                    max-width: 315px;
+                    max-width: 230px;
                     margin: 30px 20px 0;
                     .bg-box {
                         margin: 0 auto;
@@ -393,8 +393,8 @@
                         background-size: contain;
                         padding: 0 10px 45px 0;
                         img {
-                            width: 35%;
-                            max-width: 120px;
+                            width: 25%;
+                            max-width: 100px;
                             height: auto;
                             margin-right: 12%;
                         }   
@@ -412,15 +412,14 @@
             }
 
             .tab-text-box {
-                
                 display: flex;
                 justify-content: center;
-                text-align: center;
+                margin-top: -20px;
                 b{
-                    max-width: 360px;
+                    max-width: 270px;
                     flex: 1;
                     white-space: pre-line;
-                    font-size: 20px;
+                    font-size: 18px;
                     align-self: center;
                     font-weight: normal;
                     span {
