--- a/css/scss/_res-company.scss
+++ b/css/scss/_res-company.scss
@@ -122,14 +122,14 @@
     text-align: center;
     margin-top: 110px;
 }
-.tab-con02 > b{
-    font-size: 40px;
-    font-family: 'NanumGothicExtraBold';
-    color: #8CC63E;
-}
 .tab-con02 > strong{
     font-size: 40px;
     font-family: 'NanumGothicExtraBold';
+}
+.tab-con02 > strong> b{
+    font-size: 40px;
+    font-family: 'NanumGothicExtraBold';
+    color: #8CC63E;
 }
 .tab-con02 > p{
     margin-top: 60px;
@@ -415,7 +415,7 @@
         margin: 0 auto 0 auto;
     }
     .main-title {
-        margin: 50px 0;
+        margin: 30px 50px;
         font-size: 1.2rem;
     }
     .tab-list {
@@ -525,21 +525,21 @@
     margin-top: 40px;
 }
 .tab-sub07 > figure > img{
-    width: 25%;
+    width: 30%;
     height: auto;
 }
 .tab-con02{
     text-align: center;
     margin-top: 110px;
 }
-.tab-con02 > b{
-    font-size: 35px;
-    font-family: 'NanumGothicExtraBold';
-    color: #8CC63E;
-}
 .tab-con02 > strong{
     font-size: 35px;
     font-family: 'NanumGothicExtraBold';
+}
+.tab-con02 > strong >b{
+    font-size: 35px;
+    font-family: 'NanumGothicExtraBold';
+    color: #8CC63E;
 }
 .tab-con02 > p{
     margin-top: 60px;
@@ -957,17 +957,15 @@
     .tab-list {
         gap: 5px;
     }
-
     .tab-list li {
         padding: 8px 15px;
         font-size: 0.6rem;
     }
-
     .tab-con02{
         text-align: center;
         margin-top: 110px;
     }
-    .tab-con02 > b{
+    .tab-con02 > strong > b{
         font-size: 30px;
         font-family: 'NanumGothicExtraBold';
         color: #8CC63E;
