피드백보고수정한거
ㅇ

--- a/css/scss/_indexres.scss
+++ b/css/scss/_indexres.scss
@@ -75,7 +75,7 @@
     // section 2
 
     .sec2 {
-        height: 100vh;
+        height: 110vh;
         background-color: var(--color-white);
         display: flex;
         justify-content: center;
@@ -282,7 +282,7 @@
     //section 4
 
     .sec4 {
-        height: 100vh;
+        height: 110vh;
         background-color: var(--color-green2);
         display: flex;
         justify-content: center;
@@ -294,8 +294,8 @@
 
     .sec4-tab-menu{
         width: 100%;
-        height: 65vh;
-        padding: 60px 0;
+        height: 62vh;
+        padding: 30px 0;
         margin: 0 auto;
         position: relative;
 
@@ -342,7 +342,7 @@
     }
     
     .tab-content{
-        height: 105%;
+        height: 88%;
         display: none;
         color: var(--color-black);
         background: var(--color-white);
@@ -366,11 +366,12 @@
         }
 
         .tab-menu-1 {
+            height: 100%;
             text-align: center;
-            display: flex;
             justify-content: center;
+            display: flex;
             flex-direction: column;
-            margin: 30px 50px 0;
+            margin: 0 50px 0;
 
             b {
                 font-size: 20px;
@@ -382,7 +383,7 @@
                 align-items: center;
                 .arrowbox-1 {
                     width: 100%;
-                    max-width: 315px;
+                    max-width: 230px;
                     margin: 30px 20px 0;
                     .bg-box {
                         margin: 0 auto;
@@ -400,8 +401,8 @@
                         background-size: contain;
                         padding: 0 10px 45px 0;
                         img {
-                            width: 35%;
-                            max-width: 120px;
+                            width: 25%;
+                            max-width: 100px;
                             height: auto;
                             margin-right: 12%;
                         }   
@@ -419,15 +420,14 @@
             }
 
             .tab-text-box {
-                
                 display: flex;
                 justify-content: center;
-                text-align: center;
+                margin-top: -20px;
                 b{
-                    max-width: 360px;
+                    max-width: 270px;
                     flex: 1;
                     white-space: pre-line;
-                    font-size: 20px;
+                    font-size: 18px;
                     align-self: center;
                     font-weight: normal;
                     span {
@@ -438,7 +438,7 @@
 
             .tab-charac-1 {
                 position: absolute;
-                top: 50%;
+                top: 45%;
                 left: 2%;
                 max-width: 10vw;
                 display: flex;
@@ -464,22 +464,22 @@
         }
 
         .tab-menu-2 {
+            height: 100%;
             text-align: center;
             display: flex;
             justify-content: center;
             flex-direction: column;
-            margin: 30px 50px 0;
+            margin: 0 50px;
 
             .square-box {
                 display: flex;
                 justify-content: center;
                 a{
-                    margin-top: 30px;
-                    height: auto;
+                    margin-top: 20px;
                     div {
-                        margin: 0 10px;
+                        margin: 0 20px;
                         border-radius: 40px;
-                        padding: 30px 10px;
+                        padding: 20px 10px;
                         background-color: var(--color-green3);
                         display: flex;
                         flex-direction: column;
@@ -503,8 +503,8 @@
                             }
                         }
                         img {
-                            width: 50%;
-                            margin: 20px 0;
+                            width: 40%;
+                            margin: 10px 0;
                         }
 
                         &:active {
@@ -543,7 +543,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 40px 0;
+            margin: 20px 0 0; 
             
             button {
                 cursor: pointer;
@@ -552,20 +552,18 @@
                 background-color: var(--color-white);
                 border: solid var(--color-green1);
                 border-radius: 30px;
-                padding: 5px 40px;
+                padding: 3px 40px;
                 margin-right: 30px;
                 span {
                     margin-right: 10px;
                     color: var(--color-black);
                     font-family: 'money';
-                    font-size: 20px;
-                    white-space: nowrap;
+                    font-size: 17px;
                 }
             }
             b{
                 color: var(--color-black);
-                font-size: 1.5vw;
-                white-space: nowrap;
+                font-size: 15px;
                 font-weight: normal;
             }
         }
@@ -584,7 +582,7 @@
 
     .swiper {
         width: 100%;
-        max-height: 50vw;
+        max-height: 35vw;
         margin-top: 60px;
         border-radius: 40px;
     }
@@ -689,7 +687,7 @@
     // section 6
 
     .sec6 {
-        height: 80vh;
+        height: 100vh;
         background-color: var(--color-white);
         display: flex;
         justify-content: center;
@@ -756,11 +754,20 @@
 
     $widt : calc(100% - 100px);
 
+
+    .section-wrap {
+        padding-top: 45px !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: $widt;
+    }
+
     .sec4-tab-menu{
         display: block;
         width: 100%;
-        height: 65vh;
-        padding: 60px 0;
+        height: 50vh;
+        padding: 30px 0;
         margin: 0 auto;
         position: relative;
 
@@ -954,12 +961,12 @@
                 display: flex;
                 justify-content: center;
                 a{
-                    margin-top: 30px;
+                    margin-top: 20px;
                     height: auto;
                     div {
                         margin: 0 10px;
                         border-radius: 40px;
-                        padding: 30px 10px;
+                        padding: 15px 10px;
                         background-color: var(--color-green3);
                         display: flex;
                         flex-direction: column;
@@ -983,8 +990,8 @@
                             }
                         }
                         img {
-                            width: 50%;
-                            margin: 20px 0;
+                            width: 30%;
+                            margin: 10px 0;
                         }
 
                         &:active {
@@ -1032,7 +1039,7 @@
         
         .tab-box-cards {
             width: 100%; 
-            height: 100%; 
+            height: 70%; 
             position: relative;
             transition: .4s;
             transform-style: preserve-3d;
@@ -1050,7 +1057,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            img {width: 50%; margin-bottom: 10px;}
+            img {width: 40%; margin-bottom: 10px;}
             b {white-space: pre-line;}
             
         }
@@ -1719,7 +1726,8 @@
     }
 
     .section-wrap {
-        margin: 60px 0;
+        margin: 30px 0;
+        padding: 0 !important;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -1896,6 +1904,58 @@
         background-color: var(--color-green2);
         display: flex;
         justify-content: center;
+    }
+
+    .sec4-tab-menu{
+        display: block;
+        width: 100%;
+        height: 55vh;
+        padding: 30px 0;
+        margin: 0 auto;
+        position: relative;
+
+        .sec4-slogun {
+            position: absolute;
+            right: 0;
+            b {
+                letter-spacing: 5px;
+                font-family: 'money';
+                color: #f9f9f9;
+                font-weight: normal;
+                font-size: 23px;
+            }
+        }
+
+        .tabs{
+            list-style: none;
+            display: flex;
+            li{
+                &:nth-of-type(1) {
+                    padding: 10px 30px;
+                }
+                &:nth-of-type(2) {
+                    padding: 10px 30px;
+                    margin: 0 0 0 -5px;
+                }
+                flex: 1;
+                text-align: center;
+                background-color: #E6E6E6;
+                color: var(--color-black);
+                display: block;
+                border-radius: 15px 15px 0 0;
+                cursor: pointer;
+                font-size: 25px;
+
+                &.current{
+                    padding: 10px 30px;
+                    background: var(--color-white);
+                    color: var(--color-black);
+                    font-weight: bold;
+                }
+            }
+        }
+
+        
     }
 
     .tabs{
@@ -2214,7 +2274,7 @@
     // section5
 
     .sec5 {
-        height: 75vh;
+        height: 90vh;
         background-color: var(--color-white);
         display: flex;
         justify-content: center;
