--- a/css/index.css
+++ b/css/index.css
@@ -1107,7 +1107,7 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
-  bottom: 40px;
+  bottom: 10%;
   left: 10%;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
@@ -1117,14 +1117,10 @@ body {
   color: var(--color-white);
 }
 .slide-text b:nth-of-type(1) {
-  font-size: 140px;
-  opacity: 60%;
-}
-.slide-text b:nth-of-type(2) {
   margin: 70px 0 10px;
   font-size: 50px;
 }
-.slide-text b:nth-of-type(3) {
+.slide-text b:nth-of-type(2) {
   font-weight: normal;
   font-size: 20px;
   white-space: pre-line;
@@ -1374,20 +1370,19 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 30px 50px 0;
+  margin: 0 50px;
 }
 .tab-content .tab-menu-2 .square-box {
   display: flex;
   justify-content: center;
 }
 .tab-content .tab-menu-2 .square-box a {
-  margin-top: 30px;
-  height: auto;
+  margin-top: 20px;
 }
 .tab-content .tab-menu-2 .square-box a div {
   margin: 0 20px;
   border-radius: 40px;
-  padding: 30px 20px;
+  padding: 20px 10px;
   background-color: var(--color-green3);
   display: flex;
   flex-direction: column;
@@ -1402,7 +1397,7 @@ body {
 .tab-content .tab-menu-2 .square-box a div b:nth-of-type(1) {
   font-family: "money";
   font-weight: normal;
-  font-size: 25px;
+  font-size: 20px;
 }
 .tab-content .tab-menu-2 .square-box a div b:nth-of-type(2) {
   font-family: "NanumGothic";
@@ -1410,8 +1405,8 @@ body {
   font-size: 15px;
 }
 .tab-content .tab-menu-2 .square-box a div img {
-  width: 50%;
-  margin: 20px 0;
+  width: 40%;
+  margin: 10px 0;
 }
 .tab-content .tab-menu-2 .square-box a div:active {
   box-shadow: inset 0px 0px 5px #a2a2a2;
@@ -1439,7 +1434,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 40px 0;
+  margin: 20px 0 0;
 }
 .tab-content .tab-song-wrap button {
   cursor: pointer;
@@ -1448,14 +1443,14 @@ body {
   background-color: var(--color-white);
   border: solid var(--color-green1);
   border-radius: 30px;
-  padding: 5px 40px;
+  padding: 3px 40px;
   margin-right: 30px;
 }
 .tab-content .tab-song-wrap button span {
   margin-right: 10px;
   color: var(--color-black);
   font-family: "money";
-  font-size: 20px;
+  font-size: 17px;
 }
 .tab-content .tab-song-wrap b {
   color: var(--color-black);
@@ -1476,7 +1471,7 @@ body {
 
 .swiper {
   width: 85%;
-  max-height: 30vw;
+  max-height: 27vw;
   margin-top: 60px;
   border-radius: 40px;
 }
@@ -1569,7 +1564,7 @@ body {
 }
 
 .sec6 {
-  height: 100vh;
+  height: 105vh;
   background-color: var(--color-white);
   display: flex;
   justify-content: center;
@@ -1687,7 +1682,7 @@ body {
        object-fit: cover;
   }
   .sec2 {
-    height: 100vh;
+    height: 110vh;
     background-color: var(--color-white);
     display: flex;
     justify-content: center;
@@ -1865,7 +1860,7 @@ body {
     font-size: 20px;
   }
   .sec4 {
-    height: 100vh;
+    height: 110vh;
     background-color: var(--color-green2);
     display: flex;
     justify-content: center;
@@ -1875,8 +1870,8 @@ body {
   }
   .sec4-tab-menu {
     width: 100%;
-    height: 65vh;
-    padding: 60px 0;
+    height: 62vh;
+    padding: 30px 0;
     margin: 0 auto;
     position: relative;
   }
@@ -1917,7 +1912,7 @@ body {
     font-weight: bold;
   }
   .tab-content {
-    height: 105%;
+    height: 88%;
     display: none;
     color: var(--color-black);
     background: var(--color-white);
@@ -1937,11 +1932,12 @@ body {
     display: none;
   }
   .tab-content .tab-menu-1 {
+    height: 100%;
     text-align: center;
-    display: flex;
     justify-content: center;
+    display: flex;
     flex-direction: column;
-    margin: 30px 50px 0;
+    margin: 0 50px 0;
   }
   .tab-content .tab-menu-1 b {
     font-size: 20px;
@@ -1953,7 +1949,7 @@ body {
   }
   .tab-content .tab-menu-1 .tab-box .arrowbox-1 {
     width: 100%;
-    max-width: 315px;
+    max-width: 230px;
     margin: 30px 20px 0;
   }
   .tab-content .tab-menu-1 .tab-box .arrowbox-1 .bg-box {
@@ -1971,8 +1967,8 @@ body {
     padding: 0 10px 45px 0;
   }
   .tab-content .tab-menu-1 .tab-box .arrowbox-1 .bg-box img {
-    width: 35%;
-    max-width: 120px;
+    width: 25%;
+    max-width: 100px;
     height: auto;
     margin-right: 12%;
   }
@@ -1986,13 +1982,13 @@ body {
   .tab-content .tab-menu-1 .tab-text-box {
     display: flex;
     justify-content: center;
-    text-align: center;
+    margin-top: -20px;
   }
   .tab-content .tab-menu-1 .tab-text-box b {
-    max-width: 360px;
+    max-width: 270px;
     flex: 1;
     white-space: pre-line;
-    font-size: 20px;
+    font-size: 18px;
     align-self: center;
     font-weight: normal;
   }
@@ -2001,7 +1997,7 @@ body {
   }
   .tab-content .tab-menu-1 .tab-charac-1 {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 2%;
     max-width: 10vw;
     display: flex;
@@ -2022,24 +2018,24 @@ body {
 }
 @media (max-width: 1200px) {
   .tab-content .tab-menu-2 {
+    height: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 30px 50px 0;
+    margin: 0 50px;
   }
   .tab-content .tab-menu-2 .square-box {
     display: flex;
     justify-content: center;
   }
   .tab-content .tab-menu-2 .square-box a {
-    margin-top: 30px;
-    height: auto;
+    margin-top: 20px;
   }
   .tab-content .tab-menu-2 .square-box a div {
-    margin: 0 10px;
+    margin: 0 20px;
     border-radius: 40px;
-    padding: 30px 10px;
+    padding: 20px 10px;
     background-color: var(--color-green3);
     display: flex;
     flex-direction: column;
@@ -2062,8 +2058,8 @@ body {
     font-size: 15px;
   }
   .tab-content .tab-menu-2 .square-box a div img {
-    width: 50%;
-    margin: 20px 0;
+    width: 40%;
+    margin: 10px 0;
   }
   .tab-content .tab-menu-2 .square-box a div:active {
     box-shadow: inset 0px 0px 5px #a2a2a2;
@@ -2093,7 +2089,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 40px 0;
+    margin: 20px 0 0;
   }
   .tab-content .tab-song-wrap button {
     cursor: pointer;
@@ -2102,20 +2098,18 @@ body {
     background-color: var(--color-white);
     border: solid var(--color-green1);
     border-radius: 30px;
-    padding: 5px 40px;
+    padding: 3px 40px;
     margin-right: 30px;
   }
   .tab-content .tab-song-wrap button span {
     margin-right: 10px;
     color: var(--color-black);
     font-family: "money";
-    font-size: 20px;
-    white-space: nowrap;
+    font-size: 17px;
   }
   .tab-content .tab-song-wrap b {
     color: var(--color-black);
-    font-size: 1.5vw;
-    white-space: nowrap;
+    font-size: 15px;
     font-weight: normal;
   }
   .sec5 {
@@ -2126,7 +2120,7 @@ body {
   }
   .swiper {
     width: 100%;
-    max-height: 50vw;
+    max-height: 35vw;
     margin-top: 60px;
     border-radius: 40px;
   }
@@ -2209,7 +2203,7 @@ body {
     bottom: 4% !important;
   }
   .sec6 {
-    height: 80vh;
+    height: 100vh;
     background-color: var(--color-white);
     display: flex;
     justify-content: center;
@@ -2262,11 +2256,18 @@ body {
   }
 }
 @media (max-width: 950px) {
+  .section-wrap {
+    padding-top: 45px !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: calc(100% - 100px);
+  }
   .sec4-tab-menu {
     display: block;
     width: 100%;
-    height: 65vh;
-    padding: 60px 0;
+    height: 50vh;
+    padding: 30px 0;
     margin: 0 auto;
     position: relative;
   }
@@ -2436,13 +2437,13 @@ body {
     justify-content: center;
   }
   .tab-content .tab-menu-2 .square-box a {
-    margin-top: 30px;
+    margin-top: 20px;
     height: auto;
   }
   .tab-content .tab-menu-2 .square-box a div {
     margin: 0 10px;
     border-radius: 40px;
-    padding: 30px 10px;
+    padding: 15px 10px;
     background-color: var(--color-green3);
     display: flex;
     flex-direction: column;
@@ -2465,8 +2466,8 @@ body {
     white-space: pre-line;
   }
   .tab-content .tab-menu-2 .square-box a div img {
-    width: 50%;
-    margin: 20px 0;
+    width: 30%;
+    margin: 10px 0;
   }
   .tab-content .tab-menu-2 .square-box a div:active {
     box-shadow: inset 0px 0px 5px #a2a2a2;
@@ -2505,7 +2506,7 @@ body {
   }
   .tab-content .tab-box-cards {
     width: 100%;
-    height: 100%;
+    height: 70%;
     position: relative;
     transition: 0.4s;
     transform-style: preserve-3d;
@@ -2524,7 +2525,7 @@ body {
     flex-direction: column;
   }
   .tab-content .tab-box-front img {
-    width: 50%;
+    width: 40%;
     margin-bottom: 10px;
   }
   .tab-content .tab-box-front b {
@@ -3089,7 +3090,8 @@ body {
     justify-content: center;
   }
   .section-wrap {
-    margin: 60px 0;
+    margin: 30px 0;
+    padding: 0 !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -3237,6 +3239,52 @@ body {
     background-color: var(--color-green2);
     display: flex;
     justify-content: center;
+  }
+  .sec4-tab-menu {
+    display: block;
+    width: 100%;
+    height: 55vh;
+    padding: 30px 0;
+    margin: 0 auto;
+    position: relative;
+  }
+  .sec4-tab-menu .sec4-slogun {
+    position: absolute;
+    right: 0;
+  }
+  .sec4-tab-menu .sec4-slogun b {
+    letter-spacing: 5px;
+    font-family: "money";
+    color: #f9f9f9;
+    font-weight: normal;
+    font-size: 23px;
+  }
+  .sec4-tab-menu .tabs {
+    list-style: none;
+    display: flex;
+  }
+  .sec4-tab-menu .tabs li {
+    flex: 1;
+    text-align: center;
+    background-color: #E6E6E6;
+    color: var(--color-black);
+    display: block;
+    border-radius: 15px 15px 0 0;
+    cursor: pointer;
+    font-size: 25px;
+  }
+  .sec4-tab-menu .tabs li:nth-of-type(1) {
+    padding: 10px 30px;
+  }
+  .sec4-tab-menu .tabs li:nth-of-type(2) {
+    padding: 10px 30px;
+    margin: 0 0 0 -5px;
+  }
+  .sec4-tab-menu .tabs li.current {
+    padding: 10px 30px;
+    background: var(--color-white);
+    color: var(--color-black);
+    font-weight: bold;
   }
   .tabs {
     list-style: none;
@@ -3516,7 +3564,7 @@ body {
     font-weight: normal;
   }
   .sec5 {
-    height: 75vh;
+    height: 90vh;
     background-color: var(--color-white);
     display: flex;
     justify-content: center;
