--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -156,7 +156,7 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        bottom: 40px;
+        bottom: 10%;
         left: 10%;
         opacity: 0;
         transition: opacity 0.3s ease-in-out;
@@ -165,14 +165,10 @@
             color: var(--color-white);
             
             &:nth-of-type(1){
-                font-size: 140px;
-                opacity: 60%;
-            }
-            &:nth-of-type(2){
                 margin: 70px 0 10px;
                 font-size: 50px;
             }
-            &:nth-of-type(3){
+            &:nth-of-type(2){
                 font-weight: normal;
                 font-size: 20px;
                 white-space: pre-line;
@@ -461,18 +457,17 @@
             display: flex;
             justify-content: center;
             flex-direction: column;
-            margin: 30px 50px 0;
+            margin: 0 50px;
 
             .square-box {
                 display: flex;
                 justify-content: center;
                 a{
-                    margin-top: 30px;
-                    height: auto;
+                    margin-top: 20px;
                     div {
                         margin: 0 20px;
                         border-radius: 40px;
-                        padding: 30px 20px;
+                        padding: 20px 10px;
                         background-color: var(--color-green3);
                         display: flex;
                         flex-direction: column;
@@ -487,7 +482,7 @@
                             &:nth-of-type(1) {
                                 font-family: 'money';
                                 font-weight: normal;
-                                font-size: 25px;
+                                font-size: 20px;
                             }
                             &:nth-of-type(2) {
                                 font-family: $nanum1;
@@ -496,8 +491,8 @@
                             }
                         }
                         img {
-                            width: 50%;
-                            margin: 20px 0;
+                            width: 40%;
+                            margin: 10px 0;
                         }
 
                         &:active {
@@ -536,7 +531,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 40px 0;
+            margin: 20px 0 0; 
             
             button {
                 cursor: pointer;
@@ -545,13 +540,13 @@
                 background-color: var(--color-white);
                 border: solid var(--color-green1);
                 border-radius: 30px;
-                padding: 5px 40px;
+                padding: 3px 40px;
                 margin-right: 30px;
                 span {
                     margin-right: 10px;
                     color: var(--color-black);
                     font-family: 'money';
-                    font-size: 20px;
+                    font-size: 17px;
                 }
             }
             b{
@@ -579,7 +574,7 @@
 
     .swiper {
         width: 85%;
-        max-height: 30vw;
+        max-height: 27vw;
         margin-top: 60px;
         border-radius: 40px;
     }
@@ -684,7 +679,7 @@
     // section 6
 
     .sec6 {
-        height: 100vh;
+        height: 105vh;
         background-color: var(--color-white);
         display: flex;
         justify-content: center;
