--- a/css/company.css
+++ b/css/company.css
@@ -948,6 +948,30 @@ header {
   --color-green3: #DCEFB7;
 }
 
+.p {
+  display: inline-block;
+  opacity: 0;
+  transform: translateY(80px); /* 아래에서 시작 */
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.p.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* .b는 스크롤할 때만 보이게 설정 */
+.b {
+  opacity: 0;
+  transform: translateY(20px); /* 처음에 약간 아래에 위치 */
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.b.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .main-title-img {
   width: 100%;
   height: 250px;
@@ -1588,7 +1612,7 @@ header {
     margin: auto auto 0 auto;
   }
   .main-title {
-    margin: 30px 142px;
+    margin: 50px 142px;
     font-size: 1.6rem;
   }
   .tab-list {
@@ -1703,7 +1727,7 @@ header {
     margin-top: 40px;
   }
   .tab-sub07 > figure > img {
-    width: 25%;
+    width: 30%;
     height: auto;
   }
   .tab-con02 {
@@ -2421,7 +2445,7 @@ header {
        object-fit: cover;
   }
   .main-title {
-    margin: 25px 0;
+    margin: 30px 25px;
     font-size: 1rem;
   }
   .main-title b {
