--- a/css/scss/company.scss
+++ b/css/scss/company.scss
@@ -7,6 +7,30 @@
     --color-green2: #B7D47F;
     --color-green3: #DCEFB7;
 } 
+.p {
+    display: inline-block;
+    opacity: 0;
+    transform: translateY(80px); /* 아래에서 시작 */
+    transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.p.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* .b는 스크롤할 때만 보이게 설정 */
+.b {
+    opacity: 0;
+    transform: translateY(20px); /* 처음에 약간 아래에 위치 */
+    transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.b.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 .main-title-img {
     width: 100%;
     height: 250px;
