--- a/css/scss/food.scss
+++ b/css/scss/food.scss
@@ -341,10 +341,12 @@ article{
             margin: 90px;
             li{
                 border-color: transparent;
+                padding: 15px 0;
+                border-radius: 0;
 
                 // hover, onclick event
                 &:hover, &.active{
-                    border: 1px solid var(--color-green1);
+                    border-bottom: 1px solid var(--color-green1);
                     color: var(--color-green1);
                 }
             }
