--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -419,24 +419,26 @@ header {
 
         display: flex;
         flex-direction: column;
-        align-items: end;
         padding: 130px 50px;
 
         a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             border-radius: 20px;
             margin: 15px 0;
-            padding: 3px 20px;
+            padding: 5px 10px 5px 15px;
             background-color: var(--color-gray);
             box-shadow: 0px 2px 6px 0px #b7b7b7;
 
             li {
                 font-family: 'NanumGothicBold';
                 color: var(--color-black);
-                font-size: 20px;
+                font-size: 15px;
                 white-space: nowrap;
 
                 img {
-                    margin-left: 15px;
+                    margin-left: 7px;
                 }
             }
 
@@ -638,7 +640,7 @@ header {
             li {
                 font-family: 'NanumGothicBold';
                 color: var(--color-black);
-                font-size: 20px;
+                font-size: 15px;
 
                 img {
                     display: none;
