--- a/css/food.css
+++ b/css/food.css
@@ -61,7 +61,7 @@ input, textarea {
 }
 
 :root {
-  --color-white: #F9F9F9;
+  --color-white: #Ffffff;
   --color-gray: #F0F0F0;
   --color-black: #3C3C3C;
   --color-green1: #8CC63E;
