--- a/css/scss/_res-food.scss
+++ b/css/scss/_res-food.scss
@@ -433,14 +433,15 @@
             }
             li{
                 padding: 0;
+                margin: 60px auto;
                 // hover
-                &:nth-of-type(1)::before{
+                &::before{
                     display: none;
                 }
-                &:nth-of-type(1)::after{
+                &::after{
                     content: '↓ 클릭하여 신청하기';
-                    left: 0; top: 0; right: 15%; bottom: 5%;
-                    transform: translate(-15%, -5%);
+                    left: 0; top: 0; right: 0; bottom: 0;
+                    transform: translate(0, -5%);
                     font-size: 0.75rem;
                     color: var(--color-gray-food);
                     opacity: 1;
@@ -494,6 +495,7 @@
 
                 .tab-list{            
                     justify-content: center;
+                    font-size: 0.75rem;
                 }
             }
             .safety-tab-content{
@@ -541,13 +543,13 @@
     }
 }
 
-@media (max-width: 250px){
+@media (max-width: 305px){
     .food-safety-2{
         .safety-tab-menu{
 
             .tab-list{
                 display: inline-block;
-                row-gap: 10px;            
+                li{margin: 5px;}
             }
         }
     }
