--- a/css/scss/food.scss
+++ b/css/scss/food.scss
@@ -339,13 +339,18 @@ article{
     .food-safety-2{
         .safety-tab-menu{
             margin: 90px;
+            .tab-list{
+                font-family: 'NanumGothic';
+                font-size: 1rem;
+            }
             li{
                 border-color: transparent;
-                padding: 15px 0;
+                padding: 5px 0;
                 border-radius: 0;
 
                 // hover, onclick event
                 &:hover, &.active{
+                    font-weight: bold;
                     border-bottom: 1px solid var(--color-green1);
                     color: var(--color-green1);
                 }
