--- a/css/company.css
+++ b/css/company.css
@@ -1003,7 +1003,7 @@ header {
      object-fit: cover;
 }
 
-.body {
+body {
   background-color: var(--color-white);
   font-family: "NanumGothic";
 }
