--- a/css/scss/company.scss
+++ b/css/scss/company.scss
@@ -44,7 +44,7 @@
         object-fit: cover;
     }
 }
-.body{
+body{
     background-color: var(--color-white);
     font-family: 'NanumGothic';
 }
