--- a/css/index.css
+++ b/css/index.css
@@ -512,6 +512,7 @@ header {
   margin: 0 auto;
   padding-bottom: 10px;
   padding-top: 170px;
+  background-color: var(--color-white);
 }
 .footer-up-menu .footer-privacy {
   width: 100%;
