--- a/css/scss/_res_sustainability.scss
+++ b/css/scss/_res_sustainability.scss
@@ -50,9 +50,12 @@
         color: var(--color-white);
     }
     
+
+    
     .sustainability{
-        width: 100%;
+        width: calc(100% - 100px);
         margin: 0 50px;
+        
     }
     
     .tab-head{
@@ -89,7 +92,7 @@
                 display: flex;
                 align-items: center;
                 padding: 40px 70px;
-                background-color: #F8F8F8;
+                background-color: #F5F5F5;
                 width: 1140px;
                 margin: 10px auto;
                 b{width: 20%;}
@@ -118,7 +121,7 @@
         .pic{
             width:100%;
             padding:100px;
-            background-color: #F9F9F9;
+            background-color: #F5F5F5;
             text-align: center;
             border-radius: 46px;
             img{width: 100%;}
@@ -138,14 +141,12 @@
                     display: flex;
                     justify-content: space-between;
                     flex-direction: column;
+                    img{border-radius: 50%;}
                     div{
                         display: flex;
                         gap:30px;
                         align-items: center;
                         margin:10px 0px;
-    
-                        
-    
     
                         strong{
                             display: block;
@@ -174,8 +175,7 @@
         }
         figure{
             width:100%;
-            padding:150px 70px;
-            background-color: #F9F9F9;
+            padding:0px 70px;
             text-align: center;
             border-radius: 46px;
             img{
@@ -335,7 +335,7 @@
             
             li{
                 display: block;
-                background-color: #F8F8F8;
+                background-color: #F5F5F5;
                 width: 100%;
                 margin: 10px auto;
                 text-align: center;
@@ -372,7 +372,7 @@
         .pic{
             width:100%;
             padding: 0px !important;;
-            background-color: #F9F9F9;
+            background-color: #F5F5F5;
             text-align: center;
             border-radius: 46px;
             img{width: 100%;}
@@ -415,7 +415,7 @@
                 }
                 p{
                     font-size: 20px;
-                    padding: 40px 0 60px;
+                    padding: 0 0 60px;
                     line-height: 2;
                     word-break: keep-all;
                     br{display: none;}
@@ -424,7 +424,6 @@
                 figure{
                     width:100%;
                     padding:0px 0px;
-                    background-color: #F9F9F9;
                     text-align: center;
                     border-radius: 46px;
                     img{
@@ -483,7 +482,7 @@
         }
             p{font-size: 15px;
                 font-weight: bolder;
-                
+                width: calc(1007px - 580px);
             }
         }
     }
@@ -601,7 +600,7 @@
             text-align: center;
 
             padding: 20px 10px;
-            background-color: #F8F8F8;
+            background-color: #F5F5F5;
             width: 100%;
             margin: 10px auto;
             div{
@@ -691,8 +690,7 @@
             }
             figure{
                 width:100%;
-                padding:20px 20px;
-                background-color: #F9F9F9;
+                padding:0 20px;
                 text-align: center;
                 border-radius: 46px;
                 overflow: scroll;
@@ -761,6 +759,7 @@
     }
         p{font-size: 15px;
             font-weight: bolder;
+            width: calc(100% - 25px);
         }
     }
 }
